# OBDII-HUD

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.c
LaptopBridge/: CMakeLists.txt  main.cpp
hud2/: HUD Dashboard.html  app.jsx  chrome.jsx  gauges.jsx  page1.jsx  page2.jsx  page3.jsx  telemetry.jsx  tokens.css
ios/: Info.plist.in
kpi/: KPI Dashboard.html  app.jsx
qml/: HudView.qml  VariantMinimal.qml  main.qml
qml/components/: AdasOverlay.qml  ArcGauge.qml  BackgroundScene.qml  BottomBar.qml  BottomStatusBar.qml  HudPanel.qml  MiniGauge.qml  ProgressBar.qml  ScanlineEffect.qml  SpeedCenter.qml  TopBar.qml  TopInfoPanel.qml  WarningIcons.qml
qml/hud2/: ArcGauge.qml  BarGauge.qml  CompassRose.qml  FuelGauge.qml  GearIndicator.qml  Hud2App.qml  Hud2Theme.qml  O2Trace.qml  Page1Driving.qml  Page2Engine.qml  Page3Nav.qml  RadialGauge.qml  qmldir
resouces/: qml.qrc
src/: Clock.cpp  Clock.h  ObdManager.cpp  ObdManager.h  ObdParser.cpp  ObdParser.h  ObdValues.h  ThemeManager.cpp  ThemeManager.h  VehicleData.cpp  VehicleData.h  WeatherData.cpp  WeatherData.h  main.cpp
